# multi-agent-hackethon

./: .env.example  .gitignore  Makefile  MultiAgent-Hackethon.md  README.md  project-plan.md  pyproject.toml
docs/: Eng Acc - Hackathon Topics.docx  MultiAgent-Hackethon.docx
frontend/: app.py
frontend/pages/: 1_Home.py  2_Upload_Analyze.py  3_Incident_Explorer.py  4_Cookbook.py  5_Timeline_Root_Cause.py  6_Workflow_Graph.py  7_Artifacts_Exports.py  8_Integrations.py  9_Runs_History.py
frontend/utils/: api_client.py  constants.py  data_access.py  formatters.py  mock_data.py  state.py  view_helpers.py
logs/: README.md  expected_results.json
src/multi_agent/: __init__.py  config.py  main.py
src/multi_agent/integrations/: jira.py  slack.py
tests/: test_integrations.py
